# imexlb

./: LICENSE  README.md  common.cmake  run_mpi.sh  set_env.sh  set_kokkos.sh
tgv/: CMakeLists.txt  Makefile  Makefile.thetaGPU  README.md  example_utils.hpp  input.in  main.cpp  runI.sh  run_polaris.sh  runconfig.sh  set_kokkos.sh
tgv/PROF_ANALYSIS/simpleAnalysis/: simpleProfile_Rank1.txt  simpleProfile_Rank2.txt  simpleProfile_Rank4.txt  simpleProfile_Rank8.txt
tgv/polaris_runs/: imexlbm_tgv.e1147404  imexlbm_tgv.o1147404
tgv/runs/grid1024/: imexlbm_tgv.e1122887  imexlbm_tgv.o1122824  imexlbm_tgv.o1122887  imexlbm_tgv.o1123191  imexlbm_tgv.o1123737  imexlbm_tgv.o1124237  imexlbm_tgv.o1125561
tgv/runs/grid256/: imexlbm_tgv.e966737  imexlbm_tgv.e966744  imexlbm_tgv.e966746  imexlbm_tgv.o668208  imexlbm_tgv.o671707  imexlbm_tgv.o672226  imexlbm_tgv.o703589  imexlbm_tgv.o706501  imexlbm_tgv.o706946  imexlbm_tgv.o708363  imexlbm_tgv.o966737  imexlbm_tgv.o966744  imexlbm_tgv.o966746  imexlbm_tgv.o966775  imexlbm_tgv.o966779  imexlbm_tgv.o966786
tgv/runs/grid512/: imexlbm_tgv.e901081  imexlbm_tgv.e915877  imexlbm_tgv.e916252  imexlbm_tgv.e916349  imexlbm_tgv.e916436  imexlbm_tgv.e926862  imexlbm_tgv.o709115  imexlbm_tgv.o712847  imexlbm_tgv.o724718  imexlbm_tgv.o727116  imexlbm_tgv.o743501  imexlbm_tgv.o744054  imexlbm_tgv.o755407  imexlbm_tgv.o760342  imexlbm_tgv.o794475  imexlbm_tgv.o799967  imexlbm_tgv.o817242  imexlbm_tgv.o900992  imexlbm_tgv.o901081  imexlbm_tgv.o901169  (+5 more)
tgv/src/: System.cpp  System.hpp  lbm.cpp  lbm.hpp  mpi_exchange.cpp  mpi_view_transfer.cpp
(+28 files in other folders)
